--- a/src/views/homepage.hbs
+++ b/src/views/homepage.hbs
@@ -1,4 +1,11 @@
-<div class="row mt-5">
+{{#section 'link'}}
+<link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/journal/bootstrap.min.css"
+    />
+{{/section}}
+<div class="container">
+  <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body text-center">
         <h1><i class="fab fa-node-js fa-3x"></i></h1>
@@ -10,3 +17,4 @@
       </div>
     </div>
   </div>
+</div>
