--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -11,6 +11,11 @@
         Logout
       </button>
 </form>
+<form action = "/users/logoutall" method="POST">
+    <button type="submit" class="btn btn-primary btn-block">
+        Logout from all devices
+      </button>
+</form>
     </div>
 
     
