--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,38 +1,203 @@
-{{#section 'title'}}
-    <title>Login</title>
-{{/section}}
-<div class="container">
-  <div class="row mt-5">
-    <div class="col-md-6 m-auto">
-      <div class="card card-body">
-        <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
-        <form action="/users/login" method="POST">
-          <div class="form-group">
-            <label for="email">Username</label>
-            <input
-              type="text"
-              id="username"
-              name="username"
-              class="form-control"
-              placeholder="Enter Username"
-            />
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input
-              type="password"
-              id="password"
-              name="password"
-              class="form-control"
-              placeholder="Enter Password"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary btn-block">Login</button>
-        </form>
-        <p class="lead mt-4">
-          No Account? <a href="/users/register">Register</a>
-        </p>
-      </div>
+{{#section 'link'}}
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+    <!-- Icon -->
+    <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
+    <!-- Slicknav -->
+    <link rel="stylesheet" type="text/css" href="assets/css/slicknav.css">
+    <!-- Nivo Lightbox -->
+    <link rel="stylesheet" type="text/css" href="assets/css/nivo-lightbox.css">
+    <!-- Animate -->
+    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
+    <!-- Main Style -->
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <!-- Responsive Style -->
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <!--fa fa icon-->
+    
+    
+    {{/section}}
+    {{#section 'style'}}
+    #mygif {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
+    {{/section}}
+  
+    
+  
+  
+  <img src="https://i.pinimg.com/originals/47/7b/7c/477b7c1c999a42694b936fd191279b84.gif" id="mygif" alt="...">
+    <div style="text-align: center; position: sticky;">
+      <h1> <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 80%;">Organique</span> </h1>
     </div>
-  </div>
-</div>
+    <br>
+    <!-- form -->
+    <section id="form-dom">
+        <div class="container" style="margin-bottom: 30px; opacity: 80%;">
+          <div class="row">
+            <div class="col-12">
+              <div class="col-12 col-md-6 log-style">
+                <div id="form-main">
+                  <h1
+                    class="section-title wow fadeInUp animated"
+                    data-wow-delay="0.2s"
+                    style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
+                    Log In
+                  </h1>
+                  <div class="design">
+                    <form id="login-form">
+                      <h3></h3>
+                      <div class="row">
+                        <div class="col">
+                          <input
+                            type="text"
+                            class="form-control"
+                            placeholder="Login Id"
+                            name="login-email"
+                          />
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                          <input
+                            type="Password"
+                            class="form-control"
+                            placeholder="Password"
+                            name="login-password"
+                          />
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col">
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-12 col-md-6">
+                          <button
+                            type="button"
+                            id="passwordReset"
+                            class="btn btn-common btn-nv-sty"
+                            style="
+                              width: 100%;
+                              background-color: #fff;
+                              color: #000;
+                              border: 1px solid black;
+                            "
+                          >
+                            Forgot Password
+                          </button>
+                        </div>
+                        <div class="col-12 col-md-6">
+                          <button
+                            type="submit"
+                            href=""
+                            class="btn btn-common btn-nv-sty"
+                            style="width: 100%; "
+                          >
+                            Log In
+                          </button>
+                        </div>
+                      </div>
+
+                      <!-- <a href="/signup.html">Don't have an account? Register here!</a> -->
+                      <br>
+                      <p style="font-size: 20px;">Don't have an account? Register using the link given below.</p>
+                      <div class="row">
+                        <div class="col">
+                          <p class="error text-danger" align="center"></p>
+                          <p class="success text-success" align="center"></p>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer id="contact" class="footer-area section-padding" style="position: absolute; margin-top: 25px; width: 100%; opacity: 80%;">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
+                    <h3>QUICK LINKS</h3>
+                    <ul>
+                        <li><a href="login.html">LOGIN</a></li>
+                        <li><a href="farmer-reg.html">REGISTRATION FOR NEW FARMER</a></li>
+                        <li><a href="investor-reg.html">REGISTRATION FOR NEW INVESTOR</a></li>
+                        <li><a href="institution-reg.html">REGISTRATION FOR NEW FOOD-MAKING INSTITUTION</a></li>
+                        <li><a href="buyer-reg.html">REGISTRATION FOR NEW BUYER</a></li>
+                        <li><a href="about.html">ABOUT ORGANIQUE</a></li>
+                        <li><a href="contact.html">CONTACT US</a></li>
+                        <li><a href="help.html">HELP</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
+    <!-- Go to Top Link -->
+    <a href="#" class="back-to-top">
+        <i class="lni-chevron-up"></i>
+    </a>
+
+    <div id="preloader">
+        <div class="sk-circle">
+            <div class="sk-circle1 sk-child"></div>
+            <div class="sk-circle2 sk-child"></div>
+            <div class="sk-circle3 sk-child"></div>
+            <div class="sk-circle4 sk-child"></div>
+            <div class="sk-circle5 sk-child"></div>
+            <div class="sk-circle6 sk-child"></div>
+            <div class="sk-circle7 sk-child"></div>
+            <div class="sk-circle8 sk-child"></div>
+            <div class="sk-circle9 sk-child"></div>
+            <div class="sk-circle10 sk-child"></div>
+            <div class="sk-circle11 sk-child"></div>
+            <div class="sk-circle12 sk-child"></div>
+        </div>
+    </div>
+    <script>
+        function openForm() {
+            document.getElementById("myForm").style.display = "block";
+        }
+
+        function closeForm() {
+            document.getElementById("myForm").style.display = "none";
+        }
+    </script>
+    <script>
+        $(document).ready(function() {
+            $(".fancybox").fancybox({
+                openEffect: "none",
+                closeEffect: "none"
+            });
+
+            $(".zoom").hover(function() {
+
+                $(this).addClass('transition');
+            }, function() {
+
+                $(this).removeClass('transition');
+            });
+        });
+    </script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="assets/js/jquery-min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/jquery.countdown.min.js"></script>
+    <script src="assets/js/jquery.nav.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
+    <script src="assets/js/wow.js"></script>
+    <script src="assets/js/jquery.slicknav.js"></script>
+    <script src="assets/js/nivo-lightbox.js"></script>
+    <script src="assets/js/main.js"></script>
