--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,23 +1,4 @@
-{{#section 'link'}}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
-    <!-- Icon -->
-    <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
-    <!-- Slicknav -->
-    <link rel="stylesheet" type="text/css" href="assets/css/slicknav.css">
-    <!-- Nivo Lightbox -->
-    <link rel="stylesheet" type="text/css" href="assets/css/nivo-lightbox.css">
-    <!-- Animate -->
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <!-- Main Style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <!-- Responsive Style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
-    <!--fa fa icon-->
-    
-    
-    {{/section}}
     {{#section 'style'}}
     #mygif {
       position: fixed;
@@ -32,6 +13,7 @@
   
   
   <img src="https://i.pinimg.com/originals/47/7b/7c/477b7c1c999a42694b936fd191279b84.gif" id="mygif" alt="...">
+  <!--img src="/img/d3e4e37f704421b41d9dcab5e95a1ff4.jpg" id="mygif" alt="..."-->
     <div style="text-align: center; position: sticky;">
       <h1> <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 80%;">Organique</span> </h1>
     </div>
@@ -149,22 +131,7 @@
         <i class="lni-chevron-up"></i>
     </a>
 
-    <div id="preloader">
-        <div class="sk-circle">
-            <div class="sk-circle1 sk-child"></div>
-            <div class="sk-circle2 sk-child"></div>
-            <div class="sk-circle3 sk-child"></div>
-            <div class="sk-circle4 sk-child"></div>
-            <div class="sk-circle5 sk-child"></div>
-            <div class="sk-circle6 sk-child"></div>
-            <div class="sk-circle7 sk-child"></div>
-            <div class="sk-circle8 sk-child"></div>
-            <div class="sk-circle9 sk-child"></div>
-            <div class="sk-circle10 sk-child"></div>
-            <div class="sk-circle11 sk-child"></div>
-            <div class="sk-circle12 sk-child"></div>
-        </div>
-    </div>
+    
     <script>
         function openForm() {
             document.getElementById("myForm").style.display = "block";
@@ -191,13 +158,4 @@
         });
     </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/js/jquery-min.js"></script>
-    <script src="assets/js/popper.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/jquery.countdown.min.js"></script>
-    <script src="assets/js/jquery.nav.js"></script>
-    <script src="assets/js/jquery.easing.min.js"></script>
-    <script src="assets/js/wow.js"></script>
-    <script src="assets/js/jquery.slicknav.js"></script>
-    <script src="assets/js/nivo-lightbox.js"></script>
-    <script src="assets/js/main.js"></script>
+    
