--- a/src/views/registerinvestor.hbs
+++ b/src/views/registerinvestor.hbs
@@ -45,7 +45,7 @@
                   Register as an Investor
                 </h1>
                 <div class="design">
-                  <form id="register-form">
+                  <form id="register-form" action="/users/registerinvestor" method="POST" enctype="multipart/form-data">
                     <h3></h3>
                     <div class="row">
                       <div class="col">
@@ -53,7 +53,7 @@
                           type="text"
                           class="form-control"
                           placeholder="Full Name"
-                          name="register-name"
+                          name="registername"
                         />
                       </div>
                     </div>
@@ -73,7 +73,7 @@
                           type="email"
                           class="form-control"
                           placeholder="Email Id"
-                          name="register-email"
+                          name="email"
                         />
                       </div>
                     </div>
@@ -83,7 +83,7 @@
                           type="Password"
                           class="form-control"
                           placeholder="Password"
-                          name="login-password"
+                          name="password"
                         />
                       </div>
                     </div>
@@ -93,7 +93,7 @@
                           type="Password"
                           class="form-control"
                           placeholder="Confirm Password"
-                          name="login-password"
+                          name="password2"
                         />
                       </div>
                     </div>
@@ -113,7 +113,7 @@
                     <div class="row">
                       <div class="col">
                         <input
-                          type="text"
+                          type="number"
                           class="form-control"
                           placeholder="Starting amount(in INR)"
                           name="startingrange"
@@ -123,7 +123,7 @@
                     <div class="row">
                       <div class="col">
                         <input
-                          type="text"
+                          type="number"
                           class="form-control"
                           placeholder="Ending amount(in INR)"
                           name="endingrange"
@@ -147,10 +147,8 @@
                        <div class="col">
                       <button
                         type="submit"
-                        href=""
                         class="btn btn-common btn-nv-sty"
-                        style="width: 50%;"
-                      >
+                        style="width: 50%;">
                         Register
                       </button>
                     </div>
