--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -93,7 +93,7 @@
                           type="Password"
                           class="form-control"
                           placeholder="Confirm Password"
-                          name="login-password"
+                          name="password2"
                         />
                       </div>
                     </div>
