--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -77,7 +77,7 @@
         </ul>
       </nav>
     </header>
-    <br><br><br><br>
+    <br><br><br><br><br>
     <h1 class="section-title wow fadeInUp animated" data-wow-delay="0.2s" style="visibility: visible; -webkit-animation-delay: 0.2s; -moz-animation-delay: 0.2s; animation-delay: 0.2s;">
        <span style="background-color: #fff; font-size: 50px; color:#016168; padding: 15px; opacity: 90%;">Dashboard</span> 
     </h1>
@@ -94,8 +94,8 @@
       <div class="col">
         <div class="card" style="opacity: 90%; height: 130px">
           <div class="card-body">
-            <h5 class="card-title">Type of user</h5>
-            <p class="card-text">Farmer</p>
+            <h5 class="card-title">Average Rating</h5>
+            <p class="card-text">5</p>
           </div>
         </div>
       </div>
@@ -126,20 +126,32 @@
     <div class="row">
       <div class="col-lg-2"></div>
       <div class="col">
-        <div class="card" style="opacity: 90%; height: 350px">
+        <div class="card" style="opacity: 90%; height: 400px">
           <img class="card-img-top" src="/img/sample.jpg" alt="Card image cap" style="height: 250px; padding: 10px">
           <div class="card-body">
             <h5 class="card-title">Crop name : </h5>
             <p class="card-text">Stage of growth : </p>
+            <div class="row">
+              <div class="col-3"></div>
+              <div class="col">
+                <a href="updatecrops" class="btn btn-common btn-nv-sty">Update crop details</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div class="col">
-        <div class="card" style="opacity: 90%; height: 350px">
+        <div class="card" style="opacity: 90%; height: 400px">
           <img class="card-img-top" src="/img/sample.jpg" alt="Card image cap" style="height: 250px; padding: 10px">
           <div class="card-body">
             <h5 class="card-title">Crop name : </h5>
             <p class="card-text">Stage of growth : </p>
+            <div class="row">
+              <div class="col-3"></div>
+              <div class="col">
+                <a href="updatecrops" class="btn btn-common btn-nv-sty">Update crop details</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -152,7 +164,12 @@
         <div class="card" style="opacity: 90%; height: 160px">
           <div class="card-body">
             <h5 class="card-title">Add new crop details</h5>
-            <button type="submit" href="addcrops" class="btn btn-common btn-nv-sty" style="width: 50%;">Add</button>
+            <div class="row">
+              <div class="col-4"></div>
+              <div class="col">
+                <a href="addcrops" class="btn btn-common btn-nv-sty" style="width: 50%;">Add</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -163,10 +180,10 @@
             <p class="card-text">New deal/order confirmation request from </p>
             <div class="row">
               <div class="col">
-                <button type="submit" href="" class="btn btn-common btn-nv-sty">Accept</button>
+                <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 100%;">Accept</button>
               </div>
               <div class="col">
-                <button type="submit" href="" class="btn btn-common btn-nv-sty">Reject</button>
+                <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 100%;">Reject</button>
               </div>
             </div>
           </div>
