--- a/src/views/addcrops.hbs
+++ b/src/views/addcrops.hbs
@@ -117,7 +117,7 @@
                           type="text"
                           class="form-control"
                           placeholder="Stage of growth of the crop"
-                          name="stageofgrowth"
+                          name="dev_stage"
                         />
                       </div>
                     </div>
@@ -127,7 +127,7 @@
                         <input
                           type="file"
                           class="form-control"
-                          placeholder="Iamge of the crop"
+                          placeholder="Image of the crop"
                           name="cropimage"
                           id="cropimage"
                         />
