--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -123,14 +123,17 @@
       <div class="col-lg-2"></div>
     </div>
     <br>
+    {{#if Crops}}
+    {{#each Crops}}
+    
     <div class="row">
       <div class="col-lg-2"></div>
       <div class="col">
         <div class="card" style="opacity: 90%; height: 400px">
-          <img class="card-img-top" src="/img/sample.jpg" alt="Card image cap" style="height: 250px; padding: 10px">
+          <img class="card-img-top" src="data:{{this.1.filetype}};base64,{{this.1.bString}}" alt="Card image cap" style="height: 250px; padding: 10px">
           <div class="card-body">
-            <h5 class="card-title">Crop name : </h5>
-            <p class="card-text">Stage of growth : </p>
+            <h5 class="card-title">Crop name : {{this.1.cropname}}</h5>
+            <p class="card-text">Stage of growth :{{this.1.dev_stage}} </p>
             <div class="row">
               <div class="col-3"></div>
               <div class="col">
@@ -140,12 +143,14 @@
           </div>
         </div>
       </div>
+      
       <div class="col">
+        {{#if this.2.filetype}}
         <div class="card" style="opacity: 90%; height: 400px">
-          <img class="card-img-top" src="data:{{Crops.filetype}};base64,{{Crops.cropimage.buffer}}" alt="Card image cap" style="height: 250px; padding: 10px">
+          <img class="card-img-top" src="data:{{this.2.filetype}};base64,{{this.2.bString}}" alt="Card image cap" style="height: 250px; padding: 10px">
           <div class="card-body">
-            <h5 class="card-title">Crop name : data:{{Crops.filetype}};base64,{{Crops.cropimage.buffer}}</h5>
-            <p class="card-text">Stage of growth : </p>
+            <h5 class="card-title">Crop name : {{this.2.cropname}}</h5>
+            <p class="card-text">Stage of growth :{{this.2.dev_stage}} </p>
             <div class="row">
               <div class="col-3"></div>
               <div class="col">
@@ -154,9 +159,15 @@
             </div>
           </div>
         </div>
+        {{/if}}
       </div>
+      
       <div class="col-lg-2"></div>
+      
     </div>
+    
+    {{/each}}
+    {{/if}}
     <br>
     <div class="row">
       <div class="col-lg-2"></div>
