--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -60,6 +60,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="chat">Chat</a>
               </li>
+              <li>
+            <a class="page-scroll" href="logout">Logout</a>
+          </li>
             </ul>
           </div>
         </div>
@@ -73,6 +76,9 @@
           </li>
           <li>
             <a class="page-scroll" href="chat">Chat</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="logout">Logout</a>
           </li>
         </ul>
       </nav>
@@ -165,7 +171,7 @@
       <div class="col-lg-2"></div>
       
     </div>
-    
+    <br>
     {{/each}}
     {{/if}}
     <br>
