--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -60,9 +60,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="chat">Chat</a>
               </li>
-              <li>
-            <a class="page-scroll" href="logout">Logout</a>
-          </li>
+              <li class="nav-item">
+              <a class="nav-link" href="logout">Logout</a>
+            </li>
             </ul>
           </div>
         </div>
