--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -104,7 +104,7 @@
                       <div class="row">
                       <div class="col-md-2 col-lg-2"></div>
                       <div class="col">
-                        <a href="register" style="font-size: 20px">Don't have an account? Register here!</a>
+                        <a href="/users/register" style="font-size: 20px">Don't have an account? Register here!</a>
                       </div>
                     </div>
                       {{!-- <p style="font-size: 20px;">Don't have an account? Register using the link given below.</p> --}}
