--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -104,7 +104,7 @@
                       <div class="row">
                       <div class="col-md-2 col-lg-2"></div>
                       <div class="col">
-                        <a href="register" style="font-size: 20px">Don't have an account? Register here!</a>
+                        <a href="/users/register" style="font-size: 20px">Don't have an account? Register here!</a>
                       </div>
                     </div>
                       {{!-- <p style="font-size: 20px;">Don't have an account? Register using the link given below.</p> --}}
@@ -131,8 +131,8 @@
                 <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                     <h3>QUICK LINKS</h3>
                     <ul>
-                        <li><a href="login">LOGIN</a></li>
-                        <li><a href="register">REGISTER</a></li>
+                        <li><a href="/users/login">LOGIN</a></li>
+                        <li><a href="/users/register">REGISTER</a></li>
                         <li><a href="about.html">ABOUT ORGANIQUE</a></li>
                         <li><a href="contact.html">CONTACT US</a></li>
                         <li><a href="help.html">HELP</a></li>
