--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -67,7 +67,7 @@
                     <div class="row">
                       <div class="col-md-3 col-lg-4"></div>
                       <div class="col">
-                        <a href="login" style="font-size: 20px">Already registered? Login here!</a>
+                        <a href="/users/login" style="font-size: 20px">Already registered? Login here!</a>
                       </div>
                     </div>
                     
@@ -94,8 +94,8 @@
                 <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
                     <h3>QUICK LINKS</h3>
                     <ul>
-                        <li><a href="login">LOGIN</a></li>
-                        <li><a href="register">REGISTER</a></li>
+                        <li><a href="/users/login">LOGIN</a></li>
+                        <li><a href="/users/register">REGISTER</a></li>
                         <li><a href="about.html">ABOUT ORGANIQUE</a></li>
                         <li><a href="contact.html">CONTACT US</a></li>
                         <li><a href="help.html">HELP</a></li>
